refactor: WHIT-2 change to hard delete
