# packages/business-logic/src/shared/abstract-entity.ts
@@ -1,19 +1,8 @@
-import {
-  BaseEntity,
-  Entity,
-  Filter,
-  PrimaryKey,
-  Property,
-} from "@mikro-orm/core";
+import { BaseEntity, Entity, PrimaryKey, Property } from "@mikro-orm/core";
 import { v4 } from "uuid";
 import ValidationLengthError from "../error/validation-length.error";
 
 @Entity({ abstract: true })
-@Filter({
-  name: "excludeDeleted",
-  default: true,
-  cond: { deletedAt: null },
-})
 export default abstract class AbstractEntity<
   E extends AbstractEntity<E>
 > extends BaseEntity<E, "id"> {
@@ -25,9 +14,6 @@ export default abstract class AbstractEntity<
 
   @Property({ type: Date, version: true })
   updatedAt: Date = new Date();
-
-  @Property({ type: Date, nullable: true })
-  deletedAt?: Date;
 
   protected checkLength(
     entityType: string,
