# packages/frontend-api/src/shared/abstract-model.ts
@@ -2,5 +2,4 @@ export default interface AbstractModel {
   readonly id: string;
   readonly createdAt: Date;
   readonly updatedAt: Date;
-  readonly deletedAt?: Date;
 }
